Removing unneeded CSS and fixing alignment issues

--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -1,9 +1,6 @@
 .footer {
-  /* height: 10vh; */
-  // background: rgba(128,128,128, 0.566);
-  background: #333;
+  background: $offBlackColor;
   position: fixed;
-
   bottom: 0;
   left: 0;
   right: 0;
