--- a/dev/styles/partials/_start.scss
+++ b/dev/styles/partials/_start.scss
@@ -57,3 +57,10 @@
     margin: 2rem 0;
   }
 }
+
+.start-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
